# ai-agent-todo-app

./: .dockerignore  .eslintignore  .gitignore  .prettierrc  IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json  package.json
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: auth.py  tasks.py
backend/src/database/: engine.py
backend/src/middleware/: auth.py
backend/src/models/: password_reset.py  task.py  user.py
backend/src/services/: auth_service.py  email_service.py  task_service.py
backend/src/utils/: security.py
backend/tests/: test_auth.py  test_tasks.py
specs/001-multi-user-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multi-user-todo-app/checklists/: requirements.md
specs/001-multi-user-todo-app/contracts/: todo-api-contract.md
src/components/ai-chatbot/: AIChatBot.jsx
src/components/auth/: LoginForm.jsx  SignupForm.jsx
src/components/layout/: Header.jsx  Navigation.jsx
src/components/tasks/: TaskForm.jsx  TaskItem.jsx  TaskList.jsx
src/pages/: _app.jsx  index.jsx
src/pages/ai-assistant/: index.jsx
src/pages/auth/: forgot-password.jsx  login.jsx  reset-password.jsx  signup.jsx
src/pages/dashboard/: index.jsx
src/pages/tasks/: [id].jsx  create.jsx  index.jsx
src/pages/tasks/edit/: [id].jsx
src/services/: api.js  auth.js  tasks.js
src/styles/: globals.css
src/utils/: validation.js
