[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-chatbot-backend"
version = "0.1.0"
description = "Backend for AI-Powered Natural Language Chatbot for Todo Management"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "sqlmodel>=0.0.16",
    "uvicorn>=0.24.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "better-exceptions>=0.3.3",
    "structlog>=23.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "openai>=1.3.5",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "pyjwt>=2.8.0",
    "mcp>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "ruff>=0.1.6",
    "isort>=5.12.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B", "UP", "PGH", "PL", "PT", "PYI", "RUF"]
ignore = ["PLR"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
